--- a/characters.html
+++ b/characters.html
@@ -11,10 +11,10 @@
   <!-- ====== TRUTH BULLET WHEEL ====== -->
   <nav class="wheel" aria-label="Truth Bullet Navigation">
     <ul>
-      <li class="b-home" data-href="index.html" title="Home">Home</li>
       <li class="b-about" data-href="index.html#about" title="About">About</li>
-      <li class="b-chars active" title="Characters">Chars</li>
       <li class="b-sns" data-href="index.html#sns" title="SNS">SNS</li>
+      <li class="b-gameplay" data-href="index.html#gameplay" title="Gameplay">Gameplay</li>
+      <li class="b-home" data-href="index.html" title="Home">Home</li>
     </ul>
   </nav>
 
