--- a/index.html
+++ b/index.html
@@ -24,10 +24,10 @@
   <!-- ====== TRUTH BULLET WHEEL ====== -->
   <nav class="wheel" aria-label="Truth Bullet Navigation">
     <ul>
-      <li class="b-home active" data-target="#home" title="Home">Home</li>
       <li class="b-about" data-target="#about" title="About">About</li>
-      <li class="b-chars" data-href="characters.html" title="Characters">Chars</li>
       <li class="b-sns" data-target="#sns" title="SNS">SNS</li>
+      <li class="b-gameplay" data-target="#gameplay" title="Gameplay">Gameplay</li>
+      <li class="b-home active" data-target="#home" title="Home">Home</li>
     </ul>
   </nav>
 
@@ -53,6 +53,7 @@
       <img src="images/home_page_images/game_title_art.jpg" alt="game title art"/>
       <h1 class="title">Danganronpa: Trigger Happy Havoc — Fan Project</h1>
       <p class="subtitle">Hope's Peak Academy gathers the brightest students in Japan — beacons of hope for the future. But when <em>Monokuma</em> locks the gates, hope curdles into theatre and blood‑stained trials. Survive the class trials. Read the truth. Fire the bullet. <br/><small style="opacity:.7">(Fan‑made site; not affiliated with Spike Chunsoft.)</small></p>
+      <a href="characters.html" class="chars-btn">View All Characters</a>
       <div class="divider"></div>
     </div>
   </section>
@@ -151,6 +152,9 @@
       <a href="https://www.reddit.com/r/danganronpa/" target="_blank" rel="noreferrer noopener">Reddit <span>r/danganronpa</span></a>
       <a href="https://twitter.com/hashtag/Danganronpa" target="_blank" rel="noreferrer noopener">Twitter/X <span>#Danganronpa</span></a>
       <a href="https://wiki.danganronpa.com/" target="_blank" rel="noreferrer noopener">Wiki <span>wiki.danganronpa.com</span></a>
+      <a href="https://store.steampowered.com/franchise/danganronpa-official" target="_blank" rel="noreferrer noopener">Steam <span>Danganronpa on Steam</span></a>
+      <a href="https://www.crunchyroll.com/series/GR75N43MY/danganronpa-the-animation" target="_blank" rel="noreferrer noopener">Crunchyroll <span>Danganronpa: The Animation</span></a>
+      <a href="https://www.spike-chunsoft.com/games/danganronpa-trigger-happy-havoc/" target="_blank" rel="noreferrer noopener">Spike Chunsoft <span>Official Publisher</span></a>
     </div>
     <div class="divider"></div>
   </section>
