--- a/character_pages/kyoko.html
+++ b/character_pages/kyoko.html
@@ -3,8 +3,8 @@
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>Makoto Naegi - Character Introduction</title>
-		<link rel="stylesheet" href="makoto_styles.css" />
+		<title>Kyoko Kirigiri - Character Introduction</title>
+		<link rel="stylesheet" href="kyoko_styles.css" />
 		<script defer>
 			document.addEventListener('DOMContentLoaded', () => {
 				const modal = document.getElementById('imageModal');
@@ -44,11 +44,9 @@
 				const switcherImage = document.getElementById('switcherImage');
 
 			const images = {
-				halfbody: '../images/halfbody/Makoto_Naegi_hb.png',
-				splash: '../images/splash_art/Makoto_Naegi_sa.png'
-			};
-
-			switcher.forEach(btn => {
+				halfbody: '../images/halfbody/Kyouko_hb.png',
+				splash: '../images/splash_art/Kyoko_Kirigiri_sa.png'
+			};				switcher.forEach(btn => {
 					btn.addEventListener('click', () => {
 						const imageType = btn.getAttribute('data-image');
 						switcherImage.src = images[imageType];
@@ -104,9 +102,9 @@
 		</div>
 
 		<header>
-			<h1 class="title">Makoto Naegi <span class="japanese">(苗木誠)</span></h1>
-			<p class="ultimate">Ultimate Lucky Student</p>
-			<p class="quote">"I'm going to keep moving forward, with hope in my heart."</p>
+			<h1 class="title">Kyoko Kirigiri <span class="japanese">(霧切響子)</span></h1>
+			<p class="ultimate">Ultimate ???</p>
+			<p class="quote">"Protection against deception, and never allow others to read your emotions. And whoever stands before you, don't let them push you around. Remember that."</p>
 		</header>
 
 		<div class="switcher-buttons-wrapper">
@@ -119,7 +117,7 @@
 		<div class="profile-container">
 			<div class="profile-visual">
 				<div class="image-switcher">
-					<img id="switcherImage" src="../images/splash_art/Makoto_Naegi_sa.png" alt="Makoto Naegi" class="switcher-image" data-enlargeable />
+					<img id="switcherImage" src="../images/splash_art/Kyoko_Kirigiri_sa.png" alt="Kyoko Kirigiri" class="switcher-image" data-enlargeable />
 				</div>
 			</div>
 
@@ -127,34 +125,34 @@
 				<div class="info-grid">
 					<div class="info-item">
 						<label>Gender</label>
-						<p>Male</p>
+						<p>Female</p>
 					</div>
 					<div class="info-item">
 						<label>Height</label>
-						<p>160 cm</p>
+						<p>167 cm</p>
 					</div>
 					<div class="info-item">
 						<label>Weight</label>
-						<p>52 kg</p>
+						<p>48 kg</p>
 					</div>
 					<div class="info-item">
 						<label>Birth Date</label>
-						<p>February 5</p>
+						<p>October 6</p>
 					</div>
 					<div class="info-item">
 						<label>Blood Type</label>
-						<p>A</p>
+						<p>B</p>
 					</div>
 				</div>
 
 				<div class="preferences">
 					<div class="pref-section">
 						<h3>Likes</h3>
-						<p>Curry, Trendy Things</p>
+						<p>Hair Braids</p>
 					</div>
 					<div class="pref-section">
 						<h3>Dislikes</h3>
-						<p>Dried mackerel, Dried bean curd</p>
+						<p>Goya, Coriander</p>
 					</div>
 				</div>
 			</div>
@@ -162,11 +160,12 @@
 
 		<section class="character-concept">
 			<div class="concept-content">
-				<div class="concept-text">
-					<h2>Character Concept</h2>
-					<p>From the planning stages it was decided that Makoto should not have much individuality, which made him difficult for character designer Rui Komatsuzaki to design compared to the other characters whose designs were more unique and distinct. Because the game was initially planned to be played from a third-person perspective from behind Makoto, he was designed wearing a hoodie with a distinctive decal on the hood to give players something to look at. His ahoge was added to give his hair some character, and he was deliberately made shorter than the other male characters in order to give him a 'herbivore man'-type image. His color scheme, though plain, were chosen because they were colors that Komatsuzaki particularly liked.</p>
-				</div>
-				<img src="../images/concept/Makoto_Naegi_concept.png" alt="Makoto concept art" class="concept-image" data-enlargeable />
+			<div class="concept-text">
+				<h2>Character Concept</h2>
+				<p>Character designer Rui Komatsuzaki has stated that Kyoko was one the most difficult female character to create in Danganronpa: Trigger Happy Havoc. It was decided by the team that she would have the image of a mysterious girl, so she was originally planned to have a toneless, monotone color scheme, but that needed to be altered after the game's direction changed to the Psycho Pop art-style and so her color scheme was changed to a pastel purple. Her early design prominently featured a school uniform with overalls because Komatsuzaki wanted it to have a rarer design than the other female characters, but this was later changed to a simple blouse and skirt. Her gloves were always a part of her design from the planning stages to give her the air of a detective, so her double-breasted jacket was added to compliment the detective look.</p>
+				<p>Komatsusaki had difficulties deciding which hairstyle to chose for Kyoko and was torn between a shorter style or a longer one. It was suggested by producer Yoshinori Terasawa that Kyoko could have a symbolic hair cutting scene in the first game, but the idea was ultimately rejected and so Kyoko's hair remained long. Because Kyoko is the replacement deuteragonist after Sayaka Maizono's death, Komatsuzaki wanted Kyoko's design to closely parallel Sayaka's and their similar hairstyles in different shades was a deliberate choice.</p>
+			</div>
+				<img src="../images/concept/Kyoko_Kirigiri_concept.png" alt="Kyoko concept art" class="concept-image" data-enlargeable />
 			</div>
 		</section>
 
